@@ -1,3 +1,8 @@
+Update : 06/Apr/2018
+  * agents/nightly::Sushi_ingest.php
+    - call to ccp_record_ingest() needed $_db argument
+  * libraries::statsutils.inc.php
+    - ccp_record_ingest now fails silently if no $_DB argument and no SESSION set
 Update : 05/Apr/2018
   * agents::CheckManual.php
     - script was not adding record to ingest record (database table) on success
